Issue with overflow-x solved.  About image changed

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -10,6 +10,7 @@
     scroll-snap-type: y mandatory;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
     .header {
       display: flex;
       height: 100vh;
@@ -149,7 +150,7 @@
         align-items: center;
         img {
           margin-left: 35px;
-          width: 350px;
+          width: 400px;
           box-shadow: -35px -35px 0px -1px rgba(0, 0, 0, 0.75);
         }
       }
@@ -582,8 +583,8 @@
         width: 100%;
         justify-content: center;
         img {
-          margin-top: 35px;
-          width: 65%;
+          margin-top: 40px;
+          width: 80%;
           margin-left: 0px;
           box-shadow: -20px -20px 0px -1px rgba(0, 0, 0, 0.75);
         }
